# TT2D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
examples/example1/: main.cpp
examples/example2/: Game.cpp  Game.h  main.cpp
examples/example3/: Game.cpp  Game.h  Log.h  Snake.cpp  Snake.h  defines.h  main.cpp
examples/example4/: snake.c
include/: CMakeLists.txt
include/TT2D/: App.h  Log.h  Rectangle.h  Renderable.h  Renderer.h  TT2D.h  TT2D_defines.h  Window.h
include/TT2D/components/: Arc.h  ColoredLine.h  ColoredPoint.h  FillRectangle.h  Line.h  Point.h  Rectangle.h
include/TT2D/components/primitives/: Point.h  PointCollection.h
include/TT2D/events/: Event.h
include/TT2D/render/: Color.h  Renderable.h  Renderer.h
include/TT2D/util/: Log.h
scripts/: build.ps1  cmake.ps1  run.ps1
src/: App.cpp  App.h  Application.cpp  Application.h  CMakeLists.txt  Renderable.cpp  TT2D.cpp  TT2D.h  Window.cpp  defines.h
src/components/: Arc.cpp  ColoredLine.cpp  ColoredPoint.cpp  FillRectangle.cpp  Line.cpp  Point.cpp  Rectangle.cpp
src/components/primitives/: Point.cpp  PointCollection.cpp
src/events/: Event.cpp
src/general/: App.cpp  TT2D.cpp
src/math/: Vector.cpp  Vector.h
src/render/: Color.cpp  Renderable.cpp  Renderer.cpp  Window.cpp  Window.h
src/util/: Log.cpp  Logger.cpp  Logger.h
